[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytunnel"
version = "0.2.0.dev1"
description = "Sync and async Python APIs for controlling SSH tunnels."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "pytunnel contributors" },
]
keywords = ["ssh", "tunnel", "port-forwarding", "paramiko", "asyncssh"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Typing :: Typed",
]
dependencies = [
  "asyncssh>=2.14",
  "paramiko>=3.4",
  "typing-extensions>=4.8; python_version < '3.11'",
]

[dependency-groups]
dev = [
  "myst-parser>=4.0",
  "nox>=2025.5.1",
  "prek>=0.1.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.13.0",
  "sphinx>=8.1",
  "sphinx-autodoc-typehints>=3.0",
  "pydata-sphinx-theme>=0.16",
  "towncrier>=24.8",
  "ty>=0.0.1a20",
]

[project.urls]
Homepage = "https://github.com/ecoughlin/pytunnel"
Issues = "https://github.com/ecoughlin/pytunnel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pytunnel"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "A",
  "ASYNC",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PERF",
  "PIE",
  "PTH",
  "PYI",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "ASYNC109",
]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ty.environment]
root = ["./src"]

[tool.towncrier]
package = "pytunnel"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "newsfragments"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/ecoughlin/pytunnel/issues/{issue})"
start_string = "<!-- towncrier release notes start -->\n"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true
